--- a/apps/frontend/src/App.scss
+++ b/apps/frontend/src/App.scss
@@ -6,6 +6,15 @@ $text_color: #3d3c42;
 .app {
     display: flex;
 }
+.full-page {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #f5f5f5; // Change as needed
+  }
+  
 
 .sidebar {
     width: 250px;
