changes to sqmt

--- a/apps/frontend/src/components/chart.scss
+++ b/apps/frontend/src/components/chart.scss
@@ -17,13 +17,19 @@
     }
 
     .bar-chart-container {
-        display: flex;
-        height: 300px;
-        align-items: flex-end;
-        gap: 15px;
-        padding: 20px 0;
+        position: relative;
+        height: 350px;
+        padding: 20px 0 50px;
         border-bottom: 1px solid #eee;
         overflow-x: auto;
+
+        .bars-wrapper {
+            display: flex;
+            height: 100%;
+            align-items: flex-end;
+            gap: 15px;
+            padding-bottom: 40px;
+        }
 
         .bar-group {
             display: flex;
@@ -31,25 +37,13 @@
             align-items: center;
             min-width: 60px;
             height: 100%;
-        }
-
-        .bar-label {
-            font-size: 12px;
-            margin-bottom: 5px;
-            text-align: center;
-            white-space: nowrap;
-            transform: rotate(-45deg);
-            transform-origin: left;
-            height: 40px;
-            width: 100%;
-            padding-left: 20px;
-            color: #666;
+            position: relative;
         }
 
         .bars-container {
             display: flex;
             gap: 5px;
-            height: 100%;
+            height: calc(100% - 50px);
             align-items: flex-end;
             width: 100%;
         }
@@ -72,6 +66,7 @@
                 border-radius: 4px;
                 opacity: 0;
                 transition: opacity 0.2s;
+                white-space: nowrap;
             }
 
             &:hover {
@@ -79,6 +74,23 @@
                     opacity: 1;
                 }
             }
+        }
+
+        .bar-label {
+            position: absolute;
+            bottom: 5px;
+            font-size: 11px;
+            text-align: center;
+            color: #666;
+            width: 100%;
+            padding-top: 5px;
+            word-wrap: break-word;
+            white-space: normal;
+            height: 40px;
+            display: flex;
+            align-items: flex-start;
+            justify-content: center;
+            line-height: 1.2;
         }
 
         .fs-bar {
